--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -7,6 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
+    <PackageReference Include="System.Memory.Data" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Azure\Storage\" />
+    <Folder Include="Dapper\" />
+    <Folder Include="Azure\AI\" />
   </ItemGroup>
 
 </Project>
