--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -18,6 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
 		<PackageReference Include="Dapper" Version="2.0.123" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
