--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -20,6 +20,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
 		<PackageReference Include="Dapper" Version="2.0.123" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
 		<PackageReference Include="System.Memory.Data" Version="6.0.0" />
