--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -15,6 +15,7 @@
 		<NeutralLanguage>en</NeutralLanguage>
 		<PackageIcon>NugetHelpers\icon.png</PackageIcon>
 		<Version>1.0.0</Version>
+		<RepositoryUrl>https://github.com/mebunnu/commonnet</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
