--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -8,14 +8,15 @@
 		<Authors>S Lalith Prasad</Authors>
 		<Company>Absolute Algorithm</Company>
 		<Description>this library consists of C# helper functions, including Azure</Description>
-		<PackageTags>C# Helper Functions, Dotnet Helper Functions, C#, Dotnet, Dapper, Sql, Azure Storage, Storage</PackageTags>
+		<PackageTags>C# Helper Functions, Dotnet Helper Functions, C#, Dotnet, Dapper, Sql, Azure Storage, Storage, Keyvault</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<PackageId>AbsoluteAlgorithm.$(AssemblyName)</PackageId>
 		<NeutralLanguage>en</NeutralLanguage>
-		<PackageIcon>NugetHelpers\icon.png</PackageIcon>
+		<PackageIcon>icon.png</PackageIcon>
 		<Version>1.0.0</Version>
 		<RepositoryUrl>https://github.com/mebunnu/commonnet</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -40,6 +41,12 @@
 	  </None>
 	  <None Update="NugetHelpers\icon.png">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
 	  </None>
 	</ItemGroup>
 
