--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -13,7 +13,7 @@
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<PackageId>AbsoluteAlgorithm.$(AssemblyName)</PackageId>
 		<NeutralLanguage>en</NeutralLanguage>
-		<PackageIcon>icon.png</PackageIcon>
+		<PackageIcon>NugetHelpers\icon.png</PackageIcon>
 		<Version>1.0.0.0</Version>
 		<RepositoryUrl>https://github.com/mebunnu/commonnet</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
