--- a/CommonNet.csproj
+++ b/CommonNet.csproj
@@ -14,9 +14,12 @@
 		<PackageId>AbsoluteAlgorithm.$(AssemblyName)</PackageId>
 		<NeutralLanguage>en</NeutralLanguage>
 		<PackageIcon>NugetHelpers\icon.png</PackageIcon>
-		<Version>1.0.0.0</Version>
+		<Version>1.0.1</Version>
 		<RepositoryUrl>https://github.com/mebunnu/commonnet</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
 	<ItemGroup>
